name:               pokemid
version:            0.6.1
synopsis:           Import\/export Pokémon Red\/Blue music as MIDI
homepage:           https://github.com/mtolly/pokemid
license:            PublicDomain
author:             Michael Tolly
maintainer:         miketolly@gmail.com
category:           Sound
build-type:         Simple
cabal-version:      >= 1.10

executable pokemid
  hs-source-dirs:     src
  main-is:            Main.hs
  other-modules:      Assembly
                      Scan
                      Parse
                      Graph
                      Midi
                      AssemblyToMidi
                      MidiToAssembly
                      Clean
                      Emit
                      Error
                      Paths_pokemid
  build-depends:      base           >= 4.5      && < 4.9
                      , midi         >= 0.2.1.2  && < 0.3
                      , event-list   >= 0.1.0.2  && < 0.2
                      , non-negative >= 0.1      && < 0.2
                      , containers   >= 0.5      && < 0.6
                      , array        >= 0.4.0.0  && < 0.6
                      , split        >= 0.2.2    && < 0.3
                      , bytestring   >= 0.9.2.1  && < 0.11
  default-language:   Haskell2010
  ghc-options:        -Wall
