name:               pokemid
version:            0.9
synopsis:           Import\/export Pokémon Red\/Blue music as MIDI
homepage:           https://github.com/mtolly/pokemid
license:            PublicDomain
author:             Michael Tolly
maintainer:         miketolly@gmail.com
category:           Sound
build-type:         Simple
cabal-version:      >= 1.10

executable pokemid
  hs-source-dirs:     src
  main-is:            Main.hs
  other-modules:      Assembly
                      Scan
                      Parse
                      Graph
                      Midi
                      AssemblyToMidi
                      MidiToAssembly
                      Clean
                      Emit
                      Error
                      Paths_pokemid
  build-depends:      base
                      , midi
                      , event-list
                      , non-negative
                      , containers
                      , array
                      , split
                      , bytestring
  default-language:   Haskell2010
  ghc-options:        -Wall
  build-tools:        alex, happy
